--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ envoy==0.0.2
 slimit==0.7.4
 cssmin==0.1.4
 boto==2.6.0
-requests==0.14.2
-python-tumblpy==0.6.3
+requests==1.1.0
+python-tumblpy==0.7.0
 git+https://github.com/jyr/python-tumblr.git@b91d98257
 httplib2==0.7.7
 oauth2==1.5.211
+poster==0.8.1
