Progress so far to code with Chris.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ www/css/*.less.css
 www/js/*.min.js
 www/js/templates.js
 www/js/app_config.js
+tmp/*.jpg
+tmp/*.png
+tmp/*.gif
+tmp/*.jpeg
+tmp/*.JPG
+tmp/*.JPEG
